tests/ui/issues/issue-26217.stderr
error: lifetime may not live long enough
  --> $DIR/issue-26217.rs:4:5
   |
LL | fn bar<'a>() {
   |        -- lifetime `'a` defined here
LL |     foo::<&'a i32>();
   |     ^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`
   |
note: due to a current limitation of the type system, this implies a `'static` lifetime
  --> $DIR/issue-26217.rs:1:19
   |
LL | fn foo<T>() where for<'a> T: 'a {}
   |                   ^^^^^^^^^^^^^

error: aborting due to 1 previous error

